manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleapp1-82210889
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sampleapp1-82210889
  template:
    metadata:
      labels:
        app: sampleapp1-82210889
    spec:
      containers:
        - name: sampleapp1-82210889
          image: lamon777/sampleapp1-82210889:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-storage
              mountPath: /data
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: sampleapp1-82210889-pvc
