manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sampleapp1-82210889-ingress
  namespace: sampleapp1-82210889
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: sampleapp1-82210889.ce.kubepia.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sampleapp1-82210889
            port:
              number: 80
